[gd_scene load_steps=4 format=3 uid="uid://bxglp6e2xq2r7"]

[ext_resource type="Script" uid="uid://bd23rk21snlwn" path="res://Main.gd" id="1_r6ksj"]
[ext_resource type="Texture2D" uid="uid://bh11dc41dirja" path="res://notification-scheduler.png" id="2_7rmrj"]
[ext_resource type="Script" uid="uid://ynm3ag5xtpdk" path="res://addons/NotificationSchedulerPlugin/NotificationScheduler.gd" id="3_guixi"]

[node name="Main" type="Node"]
script = ExtResource("1_r6ksj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
texture = ExtResource("2_7rmrj")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Notification Scheduler Demo"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Delay (s): "

[node name="DelayHSlider" type="HSlider" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 1.0
exp_edit = true
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="ValueLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="IntervalHBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="IntervalCheckBox" type="CheckBox" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/IntervalHBoxContainer"]
layout_mode = 2
text = "Interval (s):"

[node name="IntervalHSlider" type="HSlider" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/IntervalHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 1.0
exp_edit = true
rounded = true
tick_count = 10

[node name="ValueLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/IntervalHBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="BadgeHBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/BadgeHBoxContainer"]
layout_mode = 2
text = "Badge Count: "

[node name="HSlider" type="HSlider" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/BadgeHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
rounded = true
tick_count = 11
ticks_on_borders = true

[node name="ValueLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/BadgeHBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="RestartCheckBox" type="CheckBox" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Upon notification opened, restart app if running"

[node name="PermissionButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Request Notification Permission"

[node name="SendButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Send"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="NotificationScheduler" type="Node" parent="."]
script = ExtResource("3_guixi")

[connection signal="value_changed" from="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer/DelayHSlider" to="." method="_on_delay_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/IntervalHBoxContainer/IntervalHSlider" to="." method="_on_interval_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/BadgeHBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/PermissionButton" to="." method="_on_permission_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/VBoxContainer/SendButton" to="." method="_on_button_pressed"]
[connection signal="initialization_completed" from="NotificationScheduler" to="." method="_on_notification_scheduler_initialization_completed"]
[connection signal="notification_dismissed" from="NotificationScheduler" to="." method="_on_notification_scheduler_notification_dismissed"]
[connection signal="notification_opened" from="NotificationScheduler" to="." method="_on_notification_scheduler_notification_opened"]
[connection signal="permission_denied" from="NotificationScheduler" to="." method="_on_notification_scheduler_permission_denied"]
[connection signal="permission_granted" from="NotificationScheduler" to="." method="_on_notification_scheduler_permission_granted"]
